# karajan

./: .env.example  .gitignore  KARAJAN Desktop.bat  PRODUCT.md  README.md  desktop_app.py  karajan_mcp.py  pyproject.toml  requirements.txt
.claude/: launch.json
app/: __init__.py  agent_console.py  auth.py  catalog.py  classifier.py  config.py  credentials.py  database.py  delegation.py  env.py  events.py  execution.py  flow_policy.py  graph_store.py  logging_config.py  main.py  metrics_export.py  models.py  monitoring.py  openclaw_client.py  production_setup.py  router.py  routing_layout.py  scheduler.py  setup_status.py  skills_catalog.py  tutorial.py  validation.py
commands/: karajan.md
data/: routing_layout.json  routing_layout.json.bak  routing_layout.json.pre-production-setup.bak  task_logs.db  task_logs.db.corrupted  task_logs_recovered.db
docs/: CLI.md  KARAJAN_TEST_REPORT.md  KARAJAN_TEST_REPORT_2026-06-25.md  ROLES.md  TUTORIAL_NAVEGACION.md  model-setups.md  provider-operational-audit.md
icon/: preset_oscuro.avif  preset_predeterminado.avif
karajan_cli/: banner.py  client.py  main.py  output.py  repl.py  serverctl.py  userconfig.py
scripts/: clean_icon.py  install_on_new_machine.ps1  setup_production.py
tests/: test_agent_console.py  test_analytics_duckdb.py  test_api.py  test_audit.py  test_catalog_architecture.py  test_config.py  test_config_persistence.py  test_controls.py  test_database.py  test_decision_drawer_ui.py  test_delegation.py  test_flow_policy.py  test_graph_store.py  test_health_and_pagination.py  test_hierarchy_groups.py  (+20 more)
(+57 files in other folders)
