[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karajan"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<1.0",
    "httpx>=0.27,<1.0",
    "rich>=13.0,<14.0",
    "prompt_toolkit>=3.0,<4.0",
    "pyfiglet>=1.0,<2.0",
]

[project.scripts]
karajan = "karajan_cli.main:run"

[tool.setuptools.packages.find]
include = ["app*", "karajan_cli*"]
